--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
 
-# Đường dẫn custom cho tài liệu OpenAPI (mặc định là /v3/api-docs)
-springdoc.api-docs.path=/api-docs
-
-# Đường dẫn custom cho Swagger UI (mặc định là /swagger-ui/index.html)
-springdoc.swagger-ui.path=/swagger-ui.html
+# springdoc.api-docs.path=/api-docs
+# springdoc.swagger-ui.path=/swagger-ui.html
