--- a/pom.xml
+++ b/pom.xml
@@ -80,12 +80,19 @@
 			<groupId>org.thymeleaf.extras</groupId>
 			<artifactId>thymeleaf-extras-springsecurity6</artifactId>
 		</dependency>
-		<!-- OpenAPI for Spring Boot 3.x -->
-		<!-- <dependency>
+<!--  OpenAPI for Spring Boot 3.x  -->
+		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.8.6</version>
-		</dependency> -->
+		</dependency>
+
+		<!--   paypal  -->
+		<dependency>
+			<groupId>com.paypal.sdk</groupId>
+			<artifactId>rest-api-sdk</artifactId>
+			<version>1.14.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.mysql</groupId>
