--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,14 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
     <!-- Starter OAuth2 Resource Server (xác thực JWT) -->
     <dependency>
         <groupId>org.springframework.boot</groupId>
